5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1593_2425.log
== TEST (2019-03-22 20:12:55) 
-- CODE:
distancia = float(input(" Digite a distancia percorrida: "))
combustivel gasto = float(input(" Digite a quantidade de combustivel gasto: "))

consumo = distancia / combustivel gasto
print(round(consumo,3))
-- ERROR:
File "XXXX", line 2
    combustivel gasto = float(input())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:13:12) 
-- CODE:
distancia = float(input(" Digite a distancia percorrida: "))
combustivel= float(input(" Digite a quantidade de combustivel gasto: "))

consumo = distancia / combustivel 
print(round(consumo,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:14:20) 
-- CODE:
distancia = float(input(" Digite a distancia percorrida: "))
combustivel= float(input(" Digite a quantidade de combustivel gasto: "))

consumo = distancia / combustivel 
print(round(consumo,3) ("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo,3) ("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:15:11) 
-- CODE:
distancia = float(input(" Digite a distancia percorrida: "))
combustivel= float(input(" Digite a quantidade de combustivel gasto: "))

consumo = distancia / combustivel 
print(round(consumo,3) )
print("km/l")
-- OUTPUT:
14.286
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:15:28) 
-- CODE:
distancia = float(input(" Digite a distancia percorrida: "))
combustivel= float(input(" Digite a quantidade de combustivel gasto: "))

consumo = distancia / combustivel 
print(round(consumo,3) )    print("km/l")
print("km/l")
-- ERROR:
File "XXXX", line 5
    print(round(consumo,3) )    print("km/l")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:15:42) 
-- CODE:
distancia = float(input(" Digite a distancia percorrida: "))
combustivel= float(input(" Digite a quantidade de combustivel gasto: "))

consumo = distancia / combustivel 
print(round(consumo,3) )  print("km/l")
print("km/l")
-- ERROR:
File "XXXX", line 5
    print(round(consumo,3) )  print("km/l")
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:15:52) 
-- CODE:
distancia = float(input(" Digite a distancia percorrida: "))
combustivel= float(input(" Digite a quantidade de combustivel gasto: "))

consumo = distancia / combustivel 
print(round(consumo,3) )  print("km/l")

-- ERROR:
File "XXXX", line 5
    print(round(consumo,3) )  print("km/l")
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:15:59) 
-- CODE:
distancia = float(input(" Digite a distancia percorrida: "))
combustivel= float(input(" Digite a quantidade de combustivel gasto: "))

consumo = distancia / combustivel 
print(round(consumo,3) ) 
print("km/l")

-- OUTPUT:
14.286
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:16:07) 
-- CODE:
distancia = float(input(" Digite a distancia percorrida: "))
combustivel= float(input(" Digite a quantidade de combustivel gasto: "))

consumo = distancia / combustivel 
print(round(consumo,3) ) 
print("km/l")

-- EXECUTION TIME:
0.182351
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:51:54) 
-- CODE:
distancia = float(input(" Digite a distancia percorrida: "))
combustivel= float(input(" Digite a quantidade de combustivel gasto: "))

consumo = distancia / combustivel 
print(round(consumo,3) ) 
print("km/l")

-- OUTPUT:
14.286
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
